2008-06-12  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceRowRenderer.cs:
	Ignore the prelit state if we're not embedded in a combo, fixes an
	works around a bug with some themes (ubuntu studio in particular)

2008-06-12  Aaron Bockover  <abock@gnome.org>

	* src/Clients/banshee-1.in: Ensure we're not always passing --debug to
	mono; this was quite an oversight and the wrapper script logic from
	0.13.x has been ported here - should account for about a 5MB savings of
	RSS on startup and could fix a number of mysterious leaks, since in 
	many cases Mono leaks stack traces when an exception is thrown in --debug
	mode (only in --debug mode, Mono does not leak otherwise); Whoops.

	* src/Core/Banshee.Core/Resources/translators.xml: Updated

	* configure.ac: Bump version and turn on the dev build

2008-06-06  Alan McGovern  <alan.mcgovern@gmail.com>
	
	* src/Libraries/Migo/Migo.Syndication/RssParser.cs:
	XmlDocument can't load xml which starts with whitespace.

2008-06-05

	Banshee 1.0 Final (1.0.0) Released

2008-06-05  Aaron Bockover  <abock@gnome.org>

	* libbanshee/banshee-player-pipeline.c: Enable the plugin installer support

	* libbanshee/banshee-player-private.h:
	* libbanshee/banshee-player-missing-elements.c: Keep the missing element
	details list preserved throughout the instance and allow showing the 
	installer for each different missing codec, but only once per codec

2008-06-05  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting/PodcastService.cs:
	Avoid NRE.

2008-06-05  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting/PodcastService.cs:
	Fix bug in migrating download preference for feeds.

2008-06-05  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Rendering.cs:
	Fix bug with our cell_context.Drawable going missing b/c we weren't